// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoansSearch SearchBar tests should render search bar with query helper 1`] = `
<SearchBar
  currentQueryString=""
  executeSearch={[MockFunction]}
  onInputChange={[MockFunction]}
  placeholder="Search"
  queryHelperFields={
    Array [
      Object {
        "defaultValue": "\\"Doe, John\\"",
        "field": "authors.full_name",
        "name": "author",
      },
      Object {
        "field": "_created",
        "name": "created",
      },
    ]
  }
>
  <Input
    action={
      Object {
        "color": undefined,
        "icon": "search",
        "onClick": [MockFunction],
      }
    }
    className="undefined ils-searchbar"
    fluid={true}
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Search"
    size="big"
    type="text"
    value=""
  >
    <div
      className="ui big fluid action input undefined ils-searchbar"
    >
      <input
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <Button
        as="button"
        icon="search"
        onClick={[MockFunction]}
      >
        <Ref
          innerRef={
            Object {
              "current": <button
                class="ui icon button"
              >
                <i
                  aria-hidden="true"
                  class="search icon"
                />
              </button>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <button
                  class="ui icon button"
                >
                  <i
                    aria-hidden="true"
                    class="search icon"
                  />
                </button>,
              }
            }
          >
            <button
              className="ui icon button"
              onClick={[Function]}
            >
              <Icon
                as="i"
                name="search"
              >
                <i
                  aria-hidden="true"
                  className="search icon"
                  onClick={[Function]}
                />
              </Icon>
            </button>
          </RefFindNode>
        </Ref>
      </Button>
    </div>
  </Input>
  <QueryBuildHelper
    currentQueryString=""
    fields={
      Array [
        Object {
          "defaultValue": "\\"Doe, John\\"",
          "field": "authors.full_name",
          "name": "author",
        },
        Object {
          "field": "_created",
          "name": "created",
        },
      ]
    }
    size={15}
    updateQueryString={[MockFunction]}
  >
    <Grid>
      <div
        className="ui grid"
      >
        <GridRow
          columns={1}
        >
          <div
            className="one column row"
          >
            <GridColumn
              width={16}
            >
              <div
                className="sixteen wide column"
              >
                Search by: 
                <List
                  bulleted={true}
                  horizontal={true}
                >
                  <div
                    className="ui bulleted horizontal list"
                    role="list"
                  >
                    <ListItem
                      as="a"
                      key="authors.full_name"
                      onClick={[Function]}
                    >
                      <a
                        className="item"
                        onClick={[Function]}
                        role="listitem"
                      >
                        author
                      </a>
                    </ListItem>
                    <ListItem
                      as="a"
                      key="_created"
                      onClick={[Function]}
                    >
                      <a
                        className="item"
                        onClick={[Function]}
                        role="listitem"
                      >
                        created
                      </a>
                    </ListItem>
                  </div>
                </List>
              </div>
            </GridColumn>
          </div>
        </GridRow>
      </div>
    </Grid>
  </QueryBuildHelper>
</SearchBar>
`;

exports[`LoansSearch SearchBar tests should render the current query string 1`] = `
<SearchBar
  currentQueryString="The Gulf: The Making of An American Sea"
  executeSearch={[Function]}
  onInputChange={[Function]}
  placeholder="Search"
>
  <Input
    action={
      Object {
        "color": undefined,
        "icon": "search",
        "onClick": [Function],
      }
    }
    className="undefined ils-searchbar"
    fluid={true}
    onChange={[Function]}
    onKeyPress={[Function]}
    placeholder="Search"
    size="big"
    type="text"
    value="The Gulf: The Making of An American Sea"
  >
    <div
      className="ui big fluid action input undefined ils-searchbar"
    >
      <input
        onChange={[Function]}
        onKeyPress={[Function]}
        placeholder="Search"
        type="text"
        value="The Gulf: The Making of An American Sea"
      />
      <Button
        as="button"
        icon="search"
        onClick={[Function]}
      >
        <Ref
          innerRef={
            Object {
              "current": <button
                class="ui icon button"
              >
                <i
                  aria-hidden="true"
                  class="search icon"
                />
              </button>,
            }
          }
        >
          <RefFindNode
            innerRef={
              Object {
                "current": <button
                  class="ui icon button"
                >
                  <i
                    aria-hidden="true"
                    class="search icon"
                  />
                </button>,
              }
            }
          >
            <button
              className="ui icon button"
              onClick={[Function]}
            >
              <Icon
                as="i"
                name="search"
              >
                <i
                  aria-hidden="true"
                  className="search icon"
                  onClick={[Function]}
                />
              </Icon>
            </button>
          </RefFindNode>
        </Ref>
      </Button>
    </div>
  </Input>
</SearchBar>
`;
